[gd_scene load_steps=7 format=2]

[ext_resource path="res://Imports/Other/m3x6.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Imports/Environment/Backgrounds/Jungle-Picture.png" type="Texture" id=2]
[ext_resource path="res://Imports/Environment/Backgrounds/LOGO.png" type="Texture" id=3]
[ext_resource path="res://Environment/Scripts/GUI and others/Main Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Main Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.01719, 0.890278 )
texture = ExtResource( 2 )
centered = false

[node name="New_game_button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.678431 )
self_modulate = Color( 0.952941, 0.952941, 0.952941, 1 )
margin_left = 464.0
margin_top = 252.0
margin_right = 631.0
margin_bottom = 300.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "New game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.678431 )
self_modulate = Color( 0.952941, 0.952941, 0.952941, 1 )
margin_left = 464.0
margin_top = 323.0
margin_right = 631.0
margin_bottom = 371.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.678431 )
self_modulate = Color( 0.952941, 0.952941, 0.952941, 1 )
margin_left = 464.0
margin_top = 398.0
margin_right = 631.0
margin_bottom = 446.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 573.0
margin_right = 82.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 2 )
text = "By Haydara"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 517, 184 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
